# models/task.go
@@ -7,4 +7,5 @@ type Task struct {
 	UserID    uint   `json:"user_id" example:"2"`
 	CreatedAt string `json:"created_at" example:"2025-05-07T12:34:56Z"`
 	UpdatedAt string `json:"updated_at" example:"2025-05-07T13:34:56Z"`
+	Project_id uint `json:"project_id" example:"1"`
 }
